# space_trader

./: .gitignore  README.md  dev.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
automate/: mining_contract.py
game/: SpaceTraders.py  space_traders.py
sample_responses/: errors.txt
space_traders/: __init__.py  agent.py  client.py  contract.py  ship.py  space_traders.py  system.py  waypoints.py
space_traders/api/: __init__.py  agent_api.py  contract_api.py  faction_api.py  fleet_api.py  ship_api.py  system_api.py  waypoint_api.py
space_traders/models/: Meta.py  __init__.py  agent.py  api_error.py  api_response.py  base_model.py  contract.py  event.py  faction.py  fleet.py  market.py  meta.py  ship.py  status.py  survey.py  system.py  waypoint.py
space_traders/my/: agent.py  contract.py  ship.py
space_traders/system/: system.py  waypoints.py
space_traders/utils/: __init__.py  paginator.py
tests/: conftest.py  test_agent.py  test_client.py  test_contract.py  test_faction.py  test_fleet.py  test_register.py  test_ship.py  test_status.py  test_systems.py
