[project]
name = "space_trader"
version = "0.0.13"
authors = [{name = "Denis", email="st@dpnet.ca"}]
description = "Async SDK for spacetraders.io"
readme = "README.MD"
requires-python = ">3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies =  [
    "pydantic >= 2",
    "httpx >= 0.24.1",
    "aiolimiter >= 1.1",
]

[project.urls]
"Homepage" = "https://github.com/dpnetca/space_trader"
"Bug Tracker" = "https://github.com/dpnetca/space_trader/issues"

[build-system]
requires=["setuptools"]
build-backend="setuptools.build_meta"

