[project]
name = "space_trader"
version = "0.1.3"
authors = [{name = "Denis", email="st@dpnet.ca"}]
description = "Async SDK for spacetraders.io"
readme = "README.MD"
requires-python = ">3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies =  [
    "pydantic >= 2.4",
    "httpx >= 0.25",
    "aiolimiter >= 1.1",
]

[project.urls]
"Homepage" = "https://github.com/dpnetca/space_trader"
"Bug Tracker" = "https://github.com/dpnetca/space_trader/issues"

[build-system]
requires=["setuptools"]
build-backend="setuptools.build_meta"

[tool.setuptools.package-data]
"space_trader" = ["py.typed"]

